crates/aranya-policy-compiler/tests/data/structs/undefined_type_in_struct_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | struct Bar { s struct Unknown }
  |                       ^^^^^^^ struct `Unknown` not defined
